Bug#34164 - Added code to allow serializable mode and read-uncommitted mode to be automatically switched with the current version of repeatable read. That is, it looks at the current value of falcon_consistent_read and sets the the atctual isolation accordingly.